--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@prisma/client": "^6.13.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
     "@types/node": "^24.2.0",
+    "prisma": "^6.13.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.2"
   }
